# mwrtms

./: .gitignore  AIEM_Implementation_Guide.md  AIEM_MS_SIGN_CONVENTION_BUG_DIAGNOSIS.md  CLAUDE.md  EMPIRICAL_TEST_REALITY_CHECK.md  LICENSE  NUMBA_INTEGRATION_COMPLETE.md  README.md  RESULTS_I2EM_TRANSITION.md  aiem_ms_output_logs_v7_FIXED.txt  check_nmm3d_hv.py  debug_hv_values.py  debug_ms_step1.py  demo_numba_ms.py  diagnose_hv.py  pyproject.toml  requirements.txt  setup.py  test_numba_integration.py
docs/: ACTUAL_NOTEBOOK_RESULTS_ANALYSIS.md  AIEM_BUG_AUDIT_RESULTS.md  AIEM_BUG_FIXES.md  AIEM_BUG_FIXES_APPLIED.md  AIEM_BUG_FIXES_CHECKLIST.md  AIEM_BUG_FIXES_COMPLETE.md  AIEM_BUG_FIXES_SUMMARY.md  AIEM_MATLAB_BUG_REPORT.md  AIEM_MS_BUG_REPORT.md  AIEM_MS_IDENTICAL_CONFIRMATION.md  AIEM_MS_INDEX.md  AIEM_MS_NORMALIZATION_CONFIRMED.md  AIEM_MS_NORMALIZATION_JUSTIFICATION.md  AIEM_MS_STATUS.md  AIEM_MULTIPLE_SCATTERING_COMPLETE_REPORT.md  AIEM_REMAINING_ISSUES.md  AIEM_ROOT_CAUSE_ANALYSIS.md  AIEM_STATUS_FINAL.md  ANISOTROPIC_CORRELATION_IMPLEMENTATION.md  COMPLETE_MATLAB_AIEM_FINAL.md  EMPIRICAL_RESULTS_ANALYSIS.md  FINAL_AIEM_STATUS.md  FINAL_SUMMARY.md  HH_BUG_FIX.md  HH_HIGH_ROUGHNESS_FAILURE.md  IEM_refactor_plan.md  KA_COMPLETE_SUMMARY.md  KA_FINAL_NOTES.md  KA_FINAL_SUMMARY.md  KA_GAUSSIAN_DELIVERY.md  KA_GENERALIZED_DELIVERY.md  KA_GENERALIZED_IMPLEMENTATION.md  KA_IMPLEMENTATION_COMPLETE.md  KA_IMPLEMENTATION_SUMMARY.md  KA_MODEL_ACFs.md  KA_MODEL_gauss.md  KA_NMM3D_COMPARISON.md  KA_NMM3D_TEST_SUMMARY.md  KA_NMM3D_VALIDATION.md  KA_README.md  (+8 more)
examples/: 01_bare_soil_isotropic.py  02_bare_soil_anisotropic.py  03_vegetation_backscatter.py  radar_modes_example.py  (+9 more)
(+359 files in other folders)
