[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mwrtms"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "numba>=0.57",
  "matplotlib>=3.7",
  "pandas>=2.0",
]
description = "Microwave Radiative Transfer Models foundation library"
readme = "README.md"
authors = [{name = "Morteza Khazaei", email = "morteza.khazaei@example.com"}]
license = {text = "MIT"}
